update products with images
